--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -14,23 +14,15 @@ body {
 
 }
 .navbar-brand {
-    
     height: 60px;
     margin-left: 40px;
-    
-    
-    
 }
 
 .navbar-brand h1 { /* heading */
- 
-
   color: white;
   margin-top: -4px;
   font-size: 1.6em;
   margin-left: 16px;
-  
-  
 }
 
 .navbar-brand a:focus, .navbar-brand a:hover {
@@ -77,23 +69,27 @@ body {
     background-color: #EEA47FFF;
 }
 
-
-#collapsable-nav li:nth-of-type(3){ /*** sushi bottom space ****/
-    height: 50px;
-    
+#nav-list hr {
+    margin: 0;
 }
 
-#collapsable-nav li:nth-of-type(1){  /*** chicken top space ***/
-    margin-top: 10px;
+#nav-list a:hover, #nav-list a:focus{
+    text-decoration: none;
+}
+
+#nav-list a:hover {
+    background-color: indigo;
+}
+
+#nav-list a {
+    color: black;
+    font-size: 1.4em;
+    padding: 20px 15px 20px 15px;
 
 }
 
-ul {
-   font-size: 1.4em;
-   color: black;
-   margin-bottom: 50px; 
-   
-}
+
+
 
 /******** HEADER END *****/
 
@@ -112,35 +108,32 @@ ul {
 
 /**** JUMBOTRON ****/
 
-#jumbo {
+article {
     background:green;
-    margin-bottom: 10px;
-}
-
-#main-page span {
-    text-align: center;
-     color: black;
-     display: block;
-     padding: 0;
-     margin-bottom: 5px;
-}
-
-
-#main-page p {
+    margin-bottom: 20px;
     
-   
+}
+
+#main-content p {
     letter-spacing: 2px;
     color: white;
-    padding: 5px;
+    padding: 15px;
     
 }
 
-#main-page h3 {
+#main-content h3 {
     color: white;
     font-weight: bold;
-    margin-top: 5px;
-    margin-bottom: 12px;
+    margin-top: 0px;
+    margin-bottom: 7px;
+    padding-top: 5px;
 }
+
+article a { /*** back to top ***/
+    color: rgb(10, 3, 2);
+    font-weight: bold;
+}
+
 
 
 /************* MD SIZE **************/
@@ -174,11 +167,10 @@ ul {
         margin-left: -2px;
       }
 
-     #main-page #jumbo {
+     #main-content article {
          padding-left: 17px;
-         margin-left: 60px;  /** matching size with given picture exmaples in asssignment **/
-         margin-right: 60px;
-         width: auto;
+         margin-left: 50px;  /** matching size with given picture exmaples in asssignment **/
+         margin-right: 35px;
      } 
       
 
